// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KibanaPageTemplate render basic template 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate kbnPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageBody euiPageBody--borderRadiusNone"
  >
    <header
      class="euiPageHeader euiPageHeader--paddingLarge euiPageHeader--restrictWidth-default euiPageHeader--responsive euiPageHeader--center"
      title="test"
    >
      <div
        class="euiPageHeaderContent"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
        >
          <div
            class="euiFlexItem"
          >
            <div
              class="euiText euiText--medium euiText--constrainedWidth"
            >
              <p>
                test
              </p>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--wrap euiPageHeaderContent__rightSideItems"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                test
              </div>
            </div>
          </div>
        </div>
      </div>
    </header>
    <div
      class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--noShadow euiPageContent euiPageContent--borderRadiusNone"
      role="main"
    >
      <div
        class="euiPageContentBody euiPage--paddingLarge euiPage--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`KibanaPageTemplate render custom empty prompt only 1`] = `
<KibanaPageTemplateInner
  isEmptyState={true}
>
  <EuiEmptyPrompt
    title={
      <h1>
        custom test
      </h1>
    }
  />
</KibanaPageTemplateInner>
`;

exports[`KibanaPageTemplate render custom empty prompt with page header 1`] = `
<KibanaPageTemplateInner
  isEmptyState={true}
  pageHeader={
    Object {
      "description": "test",
      "iconType": "test",
      "rightSideItems": Array [
        "test",
      ],
      "title": "test",
    }
  }
>
  <EuiEmptyPrompt
    title={
      <h1>
        custom test
      </h1>
    }
  />
</KibanaPageTemplateInner>
`;

exports[`KibanaPageTemplate render default empty prompt 1`] = `
<KibanaPageTemplateInner
  isEmptyState={true}
  pageHeader={
    Object {
      "description": "test",
      "iconType": "test",
      "rightSideItems": Array [
        "test",
      ],
      "title": "test",
    }
  }
/>
`;

exports[`KibanaPageTemplate render noDataContent 1`] = `
<WithSolutionNavBar(NoDataConfigPage)
  noDataConfig={
    Object {
      "actions": Object {
        "beats": Object {},
        "custom": Object {},
        "elasticAgent": Object {},
      },
      "docsLink": "test",
      "solution": "Elastic",
    }
  }
  solutionNav={
    Object {
      "icon": "solution",
      "items": Array [
        Object {
          "id": "1",
          "items": Array [
            Object {
              "id": "1.1",
              "items": undefined,
              "name": "Ingest Node Pipelines",
              "tabIndex": undefined,
            },
            Object {
              "id": "1.2",
              "items": undefined,
              "name": "Logstash Pipelines",
              "tabIndex": undefined,
            },
            Object {
              "id": "1.3",
              "items": undefined,
              "name": "Beats Central Management",
              "tabIndex": undefined,
            },
          ],
          "name": "Ingest",
          "tabIndex": undefined,
        },
        Object {
          "id": "2",
          "items": Array [
            Object {
              "id": "2.1",
              "items": undefined,
              "name": "Index Management",
              "tabIndex": undefined,
            },
            Object {
              "id": "2.2",
              "items": undefined,
              "name": "Index Lifecycle Policies",
              "tabIndex": undefined,
            },
            Object {
              "id": "2.3",
              "items": undefined,
              "name": "Snapshot and Restore",
              "tabIndex": undefined,
            },
          ],
          "name": "Data",
          "tabIndex": undefined,
        },
      ],
      "name": "Solution",
    }
  }
/>
`;

exports[`KibanaPageTemplate render solutionNav 1`] = `
<div
  class="euiPage euiPage--grow euiPageTemplate kbnPageTemplate"
  style="min-height:460px"
>
  <div
    class="euiPageSideBar euiPageSideBar--sticky kbnPageTemplate__pageSideBar"
  />
  <div
    class="euiPanel euiPanel--borderRadiusNone euiPanel--plain euiPanel--hasShadow euiPageBody euiPageBody--borderRadiusNone"
  >
    <div
      class="euiPageBody euiPageBody--borderRadiusNone euiPageBody--paddingLarge"
    >
      <header
        class="euiPageHeader euiPageHeader--restrictWidth-default euiPageHeader--bottomBorder euiPageHeader--responsive euiPageHeader--center"
        title="test"
      >
        <div
          class="euiPageHeaderContent"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--directionRow euiFlexGroup--responsive euiPageHeaderContent__top"
          >
            <div
              class="euiFlexItem"
            >
              <div
                class="euiText euiText--medium euiText--constrainedWidth"
              >
                <p>
                  test
                </p>
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--wrap euiPageHeaderContent__rightSideItems"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  test
                </div>
              </div>
            </div>
          </div>
        </div>
      </header>
      <div
        class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiPageContent euiPageContent--borderRadiusNone"
        role="main"
      >
        <div
          class="euiPageContentBody euiPage--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;
